hphp/test/zend/bad/tests-classes/factory_and_singleton_003.php
<?php
class test {

  protected function __construct($x) {
  }
}

$obj = new test;

echo "Done\n";
?>